requirements.txt 추가

--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -2,13 +2,14 @@
 {% block title %}Item Detail{% endblock title %}
 {% block content %}
     <div class="items_item">
-    <img src="{{item.image.url}}" alt="">    
+        <div id="item"><img src="{{item.image.url}}" alt="">
     <h2>{{item.title}}</h2>
     가격: {{ item.price }} <br>
     남은 수량: {{ item.amount }} <br>
     제품 설명: <br> 
         {{item.content}}<br>
     거래처: {{ item.account }}
+    </div>
     </div>
     <hr>
     <div class="right">
